News UAT/force-app/main/default/objects/Division_Info__c/Division_Info__c.object-meta.xml
<CustomObject>
    <description>Information about each division used by Ad Proofing Emails</description>
    <label>Division Information</label>
    <nameField>
        <label>Division Information Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Divisions Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>