News UAT/force-app/main/default/objects/Division_Info__c/fields/ABN__c.field-meta.xml
<CustomField>
    <fullName>ABN__c</fullName>
    <label>ABN</label>
    <length>14</length>
    <type>Text</type>
</CustomField>