News UAT/force-app/main/default/objects/Division_Info__c/fields/Disclaimer__c.field-meta.xml
<CustomField>
    <fullName>Disclaimer__c</fullName>
    <label>Disclaimer</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>