News UAT/force-app/main/default/objects/Division_Info__c/fields/External_id__c.field-meta.xml
<CustomField>
    <fullName>External_id__c</fullName>
    <externalId>true</externalId>
    <label>External id</label>
    <length>8</length>
    <required>true</required>
    <type>Text</type>
</CustomField>