News UAT/force-app/main/default/objects/Division_Info__c/fields/SwitchBoard__c.field-meta.xml
<CustomField>
    <fullName>SwitchBoard__c</fullName>
    <label>Switch Board</label>
    <type>TextArea</type>
</CustomField>