News UAT/force-app/main/default/objects/Division_Info__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ABN__c</columns>
    <columns>Address__c</columns>
    <columns>SwitchBoard__c</columns>
    <columns>Disclaimer__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>